traq-server/widget/strip-widget-prefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-widget-prefix
spec:
  stripPrefix:
    prefixes:
      - /widget
