traq-server/widget/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: traq-widget
  name: traq-widget
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: traq-widget
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: traq-widget
    spec:
      nodeSelector:
        kubernetes.io/hostname: c1-203.tokyotech.org
      containers:
        - image: ghcr.io/traptitech/traq-widget:0.3.7
          name: traq-widget
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
