traq-server/widget/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: traq-widget
  name: traq-widget
spec:
  ports:
    - name: "8003"
      port: 8003
      targetPort: 80
  selector:
    app: traq-widget
